消息调整、db位置调整