@@ -1,60 +1,58 @@
 package com.whk.net.rpc;
 
+import com.whk.MessageI18n;
 import com.whk.actor.PlayerMgr;
-import com.whk.db.repository.SysUserMapper;
+import com.whk.rpc.model.PlayerInfo;
+import org.whk.game.entity.PlayerEntity;
+import org.whk.game.mapper.PlayerMapper;
 import com.whk.net.SendMessageHolder;
 import com.whk.rpc.api.IRpcPlayerBase;
-import org.whk.message.MapBean;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Example;
+import org.whk.TipsConvert;
 import org.whk.protobuf.message.MessageOuterClass;
-import org.whk.protobuf.message.TipsOuterClass;
 
-import javax.annotation.Resource;
 import java.io.IOException;
+import java.util.LinkedList;
 import java.util.List;
-import java.util.Map;
+import java.util.Objects;
 
 /**
  * @author Administrator
  */
 public class RpcPlayerBaseImpl implements IRpcPlayerBase {
 
-    private SysUserMapper sysUserMapper;
+    private PlayerMapper playerMapper;
 
-    @Resource
-    public void setSysUserMapper(SysUserMapper sysUserMapper) {
-        this.sysUserMapper = sysUserMapper;
+    @Autowired
+    public void setPlayerMapper(PlayerMapper playerMapper) {
+        this.playerMapper = playerMapper;
     }
 
     @Override
-    public List<MapBean> getPlayers(String userName) {
-
-        var user = sysUserMapper.findById(1L);
-//        if (user.isPresent()){
-//            var players = user.get().getPlayers();
-//            var list = players.stream().map(player -> {
-//                var m = new MapBean();
-//                m.putAll(Map.of("id", player.id, "career", player.kind, "sex", player.sex, "lastLogin", player.lastLogin));
-//                return m;
-//            }).collect(Collectors.toList());
-//            return list;
-//        }
-        return null;
+    public List<PlayerInfo> getPlayers(Long userId) {
+        PlayerEntity playerEntity = new PlayerEntity();
+        playerEntity.setUserAccountId(userId);
+        List<PlayerInfo> re = new LinkedList<>();
+        var l = playerMapper.findAll(Example.of(playerEntity));
+        if (Objects.nonNull(l)){
+            re = l.stream().map(f -> new PlayerInfo().setCareer(f.getCareer()).setSex(f.getSex()).setLastLogin(f.getLastLogin())
+            .setId(f.getId()).setUserAccountId(f.getUserAccountId())).toList();
+        }
+        return re;
     }
 
     @Override
     public Boolean createPlayer(Long userId, String userName, String instanceId, Long pid) throws IOException {
-        var isSuccess = PlayerMgr.INSTANCE.creatPlayer(userId, userName, instanceId, pid);
+        var isSuccess = PlayerMgr.INSTANCE.creatPlayer(userId, instanceId, pid);
         MessageOuterClass.Message.Builder builder = MessageOuterClass.Message.newBuilder()
-                .setCommand(0x0002).setPlayerId(pid);
-        var tips = TipsOuterClass.Tips.newBuilder().setMsg("登录成功");
-        builder.setTips(tips);
-        SendMessageHolder.INSTANCE.sendMessage(builder.build());
+                .setCommand(0x0002).setTips(TipsConvert.convert(MessageI18n.getMessageTuple(16)));
+        SendMessageHolder.INSTANCE.sendMessage(builder.build(), pid);
         return isSuccess;
     }
 
     @Override
     public void test(String userName) {
-        var players = getPlayers(userName);
-        System.out.println(players);
+        System.out.println(userName);
     }
 }
